Created First Draft of Nav and Logo Markup
Created a game label with an H1 tag and used bootstrap to create a
dummy navbar with a few links.  Later I will add the API functionality
to make these links usable.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,19 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body class="container-fluid">
-      <h1>Example</h1>
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+          <h1 class="gameLabel">Tic Tac Toe Game</h1>
+        </div>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a class="navbar-brand" href="#">Sign Up</a></li>
+            <li><a class="navbar-brand" href="#">Sign In</a></li>
+            <li><a class="navbar-brand" href="#">Change Password</a></li>
+            <li><a class="navbar-brand" href="#">Sign Out</a></li>
+          </ul>
+        </div>
+      </nav>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-      eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-      minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-      ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
-      est laborum.</p>
     </body>
 </html>
