Created Markup for Stats and Log
Created markup for stats sheet and log messages, also made some styling
changes for better usability on mobile for the board markup

--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@
     </div>
   </div>
 
+  <div class="container-board">
+    <div class="row">
+      <div class="col-xs-4 box">
+        Player 1
+      </div>
+      <div class="col-xs-4 box">
+        Player 2
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-8 box">
+        Log
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-4 box">Player 1 Stats</div>
+      <div class="log col-xs-4 box">Player 2 Stats</div>
+    </div>
+  </div>
+
 </body>
 
 </html>
