Added Players file, jquery DOM manipulation
Created a welcome message in the DOM when a player signs up.  Also
created a players.js file to store the two current players

--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
           <h1 class="game-label">Tic Tac Toe Game</h1>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li><button type="button" class="btn btn-primary" data-toggle="modal" data-dismiss="modal" data-target="#exampleModal">Sign Up</button>
+          <li class="signUpNav"><button type="button" class="btn btn-primary" data-toggle="modal" data-dismiss="modal" data-target="#exampleModal">Sign Up</button>
           </li>
-          <li><a class="navbar-brand" href="#">Sign Up</a></li>
           <li><a class="navbar-brand" href="#">Sign In</a></li>
           <li><a class="navbar-brand" href="#">Change Password</a></li>
           <li><a class="navbar-brand" href="#">Sign Out</a></li>
@@ -62,10 +61,10 @@
 
   <div class="container-board">
     <div class="row">
-      <div class="col-xs-4 box">
+      <div class="col-xs-4 box pl1name">
         Player 1
       </div>
-      <div class="col-xs-4 box">
+      <div class="col-xs-4 box pl2name">
         Player 2
       </div>
     </div>
