Fix bugs and added Sign Out functionality
Added sign out functionality via a modal that shows only when a user
is signed in.  Allows two users to be signed in at once via the player
object.  Fixed a bug where sign out was not working because of a typo
and fixed another typo bug in the sign in success message

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
   </div>
 
-  <h2 class="pl">TEST</h2>
+  <h3>Game log: <span class="pl"></span></h3>
 
   <div class="container-board">
     <div class="row">
