--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
           </li>
           <li class="signInNav"><button type="button" class="btn btn-primary" data-toggle="modal" data-dismiss="modal" data-target="#signInModal">Sign In</button>
           </li>
-          <li><a class="navbar-brand" href="#">Change Password</a></li>
+          <li class="changePWNav">
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-dismiss="modal" data-target="#changePWModal">Change PW</button>
+          </li>
           <li class="signOutNav">
             <form id="sign-out">
               <input type="submit" class="btn btn-primary" name="submit" value="Sign Out">
@@ -106,26 +108,48 @@
     </div>
   </div>
 
-    <div class="modal fade signUpModal" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="exampleModalLabel">Sign Up</h4>
-          </div>
-          <div class="modal-body">
-            <form id="sign-in">
-              <input type="text" name="credentials[email]" id="sign-in-email" placeholder="Enter Email/Username">
-              <input type="password" name="credentials[password]" id="sign-in-password" placeholder="Enter Password">
-              <input type="submit" class="btn btn-primary" name="submit" value="Sign In">
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div>
+  <div class="modal fade signUpModal" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="exampleModalLabel">Sign In</h4>
+        </div>
+        <div class="modal-body">
+          <form id="sign-in">
+            <input type="text" name="credentials[email]" id="sign-in-email" placeholder="Enter Email/Username">
+            <input type="password" name="credentials[password]" id="sign-in-password" placeholder="Enter Password">
+            <input type="submit" class="btn btn-primary" name="submit" value="Sign In">
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         </div>
       </div>
     </div>
+  </div>
+
+
+  <div class="modal fade signUpModal" id="changePWModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="exampleModalLabel">Change Password</h4>
+        </div>
+        <div class="modal-body">
+          <form id="change-password">
+            <input type="password" name="passwords[old]" id="change-password-oldpw" placeholder="Enter Current Password">
+            <input type="password" name="passwords[new]" id="change-password-newpw" placeholder="Enter New Password">
+            <input type="submit" class="btn btn-primary" name="submit" value="Change Password">
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 </body>
