Finalalized Game Object FUnctionality
Finished Get Game Status button and game object preparation

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <form id="gamestatus">
       <input type="submit" class="btn btn-primary btn-lg" id="game-status" value="Game Status">
     </form>
+    <form id="kill-games">
+      <input type="submit" class="btn btn-primary btn-lg" id="game-kill" value="Clear Games">
+    </form>
       <button class="btn btn-primary btn-lg" id="cheatmode">Cheat Mode</button>
   </div>
 
