--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <form id="kill-games">
       <input type="submit" class="btn btn-primary btn-lg" id="game-kill" value="Clear Games">
     </form>
+    <form id="join-game">
+      <input type="submit" class="btn btn-primary btn-lg" id="game-join" value="Join Current Game">
+    </form>
       <button class="btn btn-primary btn-lg" id="cheatmode">Cheat Mode</button>
   </div>
 
