Finalized Game Logic
Finalized end game styling to clear the board, working on cheat mode

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     </form>
     <form id="join-game">
       <input type="submit" class="btn btn-primary btn-lg" id="game-join" value="Join Current Game">
-    </form>
+    <form id="cheat">
       <button class="btn btn-primary btn-lg" id="cheatmode">Cheat Mode</button>
+    </form>
   </div>
 
   <h3>Game log: <span class="pl"></span></h3>
@@ -82,11 +83,6 @@
       </div>
       <div class="col-xs-4 box pl2name">
         Player 2
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-8 box">
-        Log
       </div>
     </div>
     <div class="row">
