Beginning Cheat Mode
Working on cheat mode.  Put in logic to highlight winning cells.

--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
     </form>
     <form id="join-game">
       <input type="submit" class="btn btn-primary btn-lg" id="game-join" value="Join Current Game">
+    </form>
     <form id="cheat">
       <button class="btn btn-primary btn-lg" id="cheatmode">Cheat Mode</button>
     </form>
   </div>
 
-  <h3>Game log: <span class="pl"></span></h3>
+  <h3>Game log: <span class="game-log"></span></h3>
+  <h3><span class="cheatMode"></span></h3>
 
   <div class="container-board">
     <div class="row">
