--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           <h1 class="game-label">Tic Tac Toe Game</h1>
         </div>
         <ul class="nav navbar-nav navbar-right">
-          <li class="signUpNav"><button type="button" class="btn btn-primary" data-toggle="modal" data-dismiss="modal" data-target="#signUpModal">Sign Up</button>
+          <li class="signUpNav"><button type="button" class="btn btn-primary btn-top" data-toggle="modal" data-dismiss="modal" data-target="#signUpModal">Sign Up</button>
           </li>
-          <li class="signInNav"><button type="button" class="btn btn-primary" data-toggle="modal" data-dismiss="modal" data-target="#signInModal">Sign In</button>
+          <li class="signInNav"><button type="button" class="btn btn-primary btn-top" data-toggle="modal" data-dismiss="modal" data-target="#signInModal">Sign In</button>
           </li>
           <li class="changePWNav">
             <button type="button" class="btn btn-primary" data-toggle="modal" data-dismiss="modal" data-target="#changePWModal">Change PW</button>
@@ -37,6 +37,7 @@
       </div>
     </nav>
   </header>
+  <nav class="navbar navbar-default">
   <div class="game-buttons">
     <form id="newgame">
       <input type="submit" class="btn btn-primary btn-lg" id="game-button" value="Start a New Game">
@@ -50,13 +51,14 @@
     <form id="join-game">
       <input type="submit" class="btn btn-primary btn-lg" id="game-join" value="Join Current Game">
     </form>
-    <form id="cheat">
-      <button class="btn btn-primary btn-lg" id="cheatmode">Cheat Mode</button>
-    </form>
   </div>
+</nav>
 
   <h3>Game log: <span class="game-log"></span></h3>
   <h3><span class="cheatMode"></span></h3>
+  <form id="cheat">
+    <button class="btn btn-primary btn-lg" id="cheatmode">Cheat Mode</button>
+  </form>
 
   <div class="container-board">
     <div class="row">
