Trying to do AJAX calls
Beginning process to do AJAX calls to update games on the server.
Confused about the role of the HTML forms.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,13 @@
 
   <div class="container-board">
     <div class="row">
-      <div class="col-xs-4 box gamecell" id="cell0">Cell 1</div>
+      <div class="col-xs-4 box gamecell" id="cell0">
+        <form>
+          <input name="game[cell][index]" type="text" class="divform" value="0">Cell 1
+          <input name="game[cell][value]" type="text" class="divform" id="cell0Input">
+          <input name="game[over]" type="text" class="divform" value="">
+        </form>
+      </div>
       <div class="col-xs-4 box gamecell" id="cell1">Cell 2</div>
       <div class="col-xs-4 box gamecell" id="cell2">Cell 3</div>
     </div>
