Added styles to drop down menu
Added padding to drop down menu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Do not add `link` tags unless you know what you are doing -->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Indie+Flower|Revalia" rel="stylesheet">
 
   <!-- Do not add `script` tags unless you know what you are doing -->
   <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
@@ -71,6 +71,12 @@
     </ul>
   </div>
 
+  <!--  <form>
+    <input name="game[cell][index]" type="text" class="divform" value="0">
+    <input name="game[cell][value]" type="text" class="divform" id="cell0Input">
+    <input name="game[over]" type="text" class="divform" value="">
+  </form>
+-->
 
   <h3>Game log: <span class="game-log"></span></h3>
   <h3><span class="cheatMode"></span></h3>
@@ -78,12 +84,6 @@
   <div class="container-board">
     <div class="row">
       <div class="col-xs-4 box gamecell" id="cell0">Cell 1
-        <!--  <form>
-          <input name="game[cell][index]" type="text" class="divform" value="0">
-          <input name="game[cell][value]" type="text" class="divform" id="cell0Input">
-          <input name="game[over]" type="text" class="divform" value="">
-        </form>
-      -->
       </div>
       <div class="col-xs-4 box gamecell" id="cell1">Cell 2</div>
       <div class="col-xs-4 box gamecell" id="cell2">Cell 3</div>
