Fixed nav styling
Fixed styling so Nav bars don't float at different levels once a user
signs in by adding the btn-top class to all nav buttons.

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           <li class="signInNav"><button type="button" class="btn btn-primary btn-top" data-toggle="modal" data-dismiss="modal" data-target="#signInModal">Sign In</button>
           </li>
           <li class="changePWNav">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-dismiss="modal" data-target="#changePWModal">Change PW</button>
+            <button type="button" class="btn btn-primary btn-top" data-toggle="modal" data-dismiss="modal" data-target="#changePWModal">Change PW</button>
           </li>
           <li class="signOutNav">
             <form id="sign-out">
-              <input type="submit" class="btn btn-primary" name="submit" value="Sign Out">
+              <input type="submit" class="btn btn-primary btn-top" name="submit" value="Sign Out">
             </form>
           </li>
         </ul>
