--- a/index.html
+++ b/index.html
@@ -78,22 +78,22 @@
 
   <div class="container-board">
     <div class="row">
-      <div class="col-xs-4 box gamecell" id="cell0">Cell 1
+      <div class="col-xs-4 box gamecell" id="cell0">
       </div>
-      <div class="col-xs-4 box gamecell" id="cell1">Cell 2</div>
-      <div class="col-xs-4 box gamecell" id="cell2">Cell 3</div>
+      <div class="col-xs-4 box gamecell" id="cell1"></div>
+      <div class="col-xs-4 box gamecell" id="cell2"></div>
     </div>
 
     <div class="row">
-      <div class="col-xs-4 box gamecell" id="cell3">Cell 4</div>
-      <div class="col-xs-4 box gamecell" id="cell4">Cell 5</div>
-      <div class="col-xs-4 box gamecell" id="cell5">Cell 6</div>
+      <div class="col-xs-4 box gamecell" id="cell3"></div>
+      <div class="col-xs-4 box gamecell" id="cell4"></div>
+      <div class="col-xs-4 box gamecell" id="cell5"></div>
     </div>
 
     <div class="row">
-      <div class="col-xs-4 box gamecell" id="cell6">Cell 7</div>
-      <div class="col-xs-4 box gamecell" id="cell7">Cell 8</div>
-      <div class="col-xs-4 box gamecell" id="cell8">Cell 9</div>
+      <div class="col-xs-4 box gamecell" id="cell6"></div>
+      <div class="col-xs-4 box gamecell" id="cell7"></div>
+      <div class="col-xs-4 box gamecell" id="cell8"></div>
     </div>
   </div>
 
