Removed get stats feature
Started work on get wins feature.  Added a button on the right side
of the page and connected it to API.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,6 @@
           </form>
         </li>
         <li>
-          <form id="gamestatus">
-            <input type="submit" class="btn btn-primary btn-lg" id="game-status" value="Game Status">
-          </form>
         </li>
         <li>
           <form id="join-game">
@@ -66,12 +63,11 @@
     </ul>
   </div>
 
-  <!--  <form>
-    <input name="game[cell][index]" type="text" class="divform" value="0">
-    <input name="game[cell][value]" type="text" class="divform" id="cell0Input">
-    <input name="game[over]" type="text" class="divform" value="">
-  </form>
--->
+  <div class="statsContainer">
+    <form id="gamestatus">
+      <input type="submit" class="btn btn-primary btn-lg" id="game-status" value="Get a Game">
+    </form>
+  </div>
 
   <h3>Game log: <span class="game-log"></span></h3>
   <h3><span class="cheatMode"></span></h3>
