Cleaned up by removing join game feature
Button and functions removed

--- a/index.html
+++ b/index.html
@@ -51,11 +51,6 @@
         <li>
         </li>
         <li>
-          <form id="join-game">
-            <input type="submit" class="btn btn-primary btn-lg" id="game-join" value="Join Current Game">
-          </form>
-        </li>
-        <li>
             <form id="cheat">
               <button class="btn btn-primary btn-lg" id="cheatmode">Cheat Mode</button>
             </form>
@@ -65,7 +60,7 @@
 
   <div class="statsContainer">
     <form id="gamestatus">
-      <input type="submit" class="btn btn-primary btn-lg" id="game-status" value="Get a Game">
+      <input type="submit" class="btn btn-primary btn-lg" id="game-status" value="See your win total">
     </form>
   </div>
 
