--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
         </li>
         <li>
           <form id="get-a-game">
-            <input type="submit" class="btn btn-primary btn-lg" id="get-a-game" value="See Results of any Game">
+            <input type="submit" class="btn btn-primary btn-lg" id="getgame" value="See Results of any Game">
+            <input type="text" name="gameid[id]" placeholder="Enter Game ID">
+          </form>
     </ul>
   </div>
 
