Updated styling for mobile
Changed styling on buttons and drop down to make sure they show up
on mobile screens

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <li>
         <form id="get-a-game">
           <input type="submit" class="btn btn-primary btn-lg" id="getgame" value="See Results of any Game">
-          <input type="text" name="gameid[id]" placeholder="Enter Game ID">
+          <input type="text" name="gameid[id]" class="getGameID" placeholder="Enter Game ID">
         </form>
     </ul>
   </div>
