--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     </ul>
   </div>
 
-  <h3>Game log: <span class="game-log"></span></h3>
+  <h3 id="log">Game log: <span class="game-log"></span></h3>
   <h3><span class="cheatMode"></span></h3>
 
   <div class="container-board">
