--- a/index.html
+++ b/index.html
@@ -1,154 +1,10 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <title>Translatr</title>
+  </head>
+  <body>
 
-<head>
-  <title>Jon's Tic Tac Toe Game</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- Do not add `link` tags unless you know what you are doing -->
-  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Indie+Flower|Revalia" rel="stylesheet">
-
-  <!-- Do not add `script` tags unless you know what you are doing -->
-  <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
-  <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-</head>
-
-<body class="container-fluid">
-  <header>
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <h1 class="game-label">Jon's Tic Tac Toe Game</h1>
-        </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li class="signUpNav"><button type="button" class="btn btn-primary btn-top" data-toggle="modal" data-dismiss="modal" data-target="#signUpModal">Sign Up</button>
-          </li>
-          <li class="signInNav"><button type="button" class="btn btn-primary btn-top" data-toggle="modal" data-dismiss="modal" data-target="#signInModal">Sign In</button>
-          </li>
-          <li class="changePWNav">
-            <button type="button" class="btn btn-primary btn-top" data-toggle="modal" data-dismiss="modal" data-target="#changePWModal">Change PW</button>
-          </li>
-          <li class="signOutNav">
-            <form id="sign-out">
-              <input type="submit" class="btn btn-primary btn-top" name="submit" value="Sign Out">
-            </form>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-
-  <div class="dropdown">
-    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Game Menu</button>
-    <span class="caret"></span>
-    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-      <li>
-        <form id="newgame">
-          <input type="submit" class="btn btn-primary btn-lg" id="game-button" value="Start New Game">
-        </form>
-      </li>
-      <li>
-        <form id="gamestatus">
-          <input type="submit" class="btn btn-primary btn-lg" id="game-status" value="See your win total">
-        </form>
-      </li>
-      <li>
-        <form id="cheat">
-          <button class="btn btn-primary btn-lg" id="cheatmode">Cheat Mode</button>
-        </form>
-      </li>
-    </ul>
-  </div>
-
-  <h3 id="log">Game log: <span class="game-log"></span></h3>
-  <h3><span class="cheatMode"></span></h3>
-
-  <div class="container-board">
-    <div class="row">
-      <div class="col-xs-4 box gamecell" id="cell0">
-      </div>
-      <div class="col-xs-4 box gamecell" id="cell1"></div>
-      <div class="col-xs-4 box gamecell" id="cell2"></div>
-    </div>
-
-    <div class="row">
-      <div class="col-xs-4 box gamecell" id="cell3"></div>
-      <div class="col-xs-4 box gamecell" id="cell4"></div>
-      <div class="col-xs-4 box gamecell" id="cell5"></div>
-    </div>
-
-    <div class="row">
-      <div class="col-xs-4 box gamecell" id="cell6"></div>
-      <div class="col-xs-4 box gamecell" id="cell7"></div>
-      <div class="col-xs-4 box gamecell" id="cell8"></div>
-    </div>
-  </div>
-
-  <div class="modal fade signUpModal" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="exampleModalLabel">Sign Up</h4>
-        </div>
-        <div class="modal-body">
-          <form id="sign-up">
-            <input type="text" name="credentials[email]" id="sign-up-email" placeholder="Enter Email/Username">
-            <input type="password" name="credentials[password]" id="sign-up-password" placeholder="Enter Password">
-            <input type="password" name="credentials[password_confirmation]" id="sign-up-password-confirmation" placeholder="Confirm PW">
-            <input type="submit" class="btn btn-primary" name="submit" value="Sign Up">
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade signUpModal" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="exampleModalLabel">Sign In</h4>
-        </div>
-        <div class="modal-body">
-          <form id="sign-in">
-            <input type="text" name="credentials[email]" id="sign-in-email" placeholder="Enter Email/Username">
-            <input type="password" name="credentials[password]" id="sign-in-password" placeholder="Enter Password">
-            <input type="submit" class="btn btn-primary" name="submit" value="Sign In">
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div class="modal fade signUpModal" id="changePWModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h4 class="modal-title" id="exampleModalLabel">Change Password</h4>
-        </div>
-        <div class="modal-body">
-          <form id="change-password">
-            <input type="password" name="passwords[old]" id="change-password-oldpw" placeholder="Enter Current Password">
-            <input type="password" name="passwords[new]" id="change-password-newpw" placeholder="Enter New Password">
-            <input type="submit" class="btn btn-primary" name="submit" value="Change Password">
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</body>
-
+  </body>
 </html>
