--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
   </head>
   <body>
     <h1>Test</h1>
+    <form id="sign-up">
+      <input type="text" name="credentials[email]" id="sign-up-email" placeholder="Enter Email/Username">
+      <input type="password" name="credentials[password]" id="sign-up-password" placeholder="Enter Password">
+      <input type="password" name="credentials[password_confirmation]" id="sign-up-password-confirmation" placeholder="Confirm PW">
+      <input type="submit" name="submit" value="Sign Up">
+    </form>
+
   </body>
 </html>
