Added necessary scripts

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Translatr</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- Do not add `link` tags unless you know what you are doing -->
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Indie+Flower|Revalia" rel="stylesheet">
+
+<!-- Do not add `script` tags unless you know what you are doing -->
+<script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
+<script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
+
   </head>
   <body>
     <h1>Test</h1>
