Added Sign In Feature

--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
       <input type="submit" name="submit" value="Sign Up">
     </form>
 
+    <form id="sign-in">
+      <input type="text" name="credentials[email]" id="sign-in-email" placeholder="Enter Email/Username">
+      <input type="password" name="credentials[password]" id="sign-in-password" placeholder="Enter Password">
+      <input type="submit" class="btn btn-primary" name="submit" value="Sign In">
+    </form>
   </body>
 </html>
