--- a/index.html
+++ b/index.html
@@ -28,5 +28,12 @@
       <input type="password" name="credentials[password]" id="sign-in-password" placeholder="Enter Password">
       <input type="submit" class="btn btn-primary" name="submit" value="Sign In">
     </form>
+
+    <form id="change-password">
+      <input type="password" name="passwords[old]" id="change-password-oldpw" placeholder="Enter Current Password">
+      <input type="password" name="passwords[new]" id="change-password-newpw" placeholder="Enter New Password">
+      <input type="submit" class="btn btn-primary" name="submit" value="Change Password">
+    </form>
+
   </body>
 </html>
