Added Delete Feature

--- a/index.html
+++ b/index.html
@@ -35,5 +35,9 @@
       <input type="submit" class="btn btn-primary" name="submit" value="Change Password">
     </form>
 
+    <form id="sign-out">
+      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Sign Out">
+    </form>
+
   </body>
 </html>
