Added get album button

--- a/index.html
+++ b/index.html
@@ -39,5 +39,9 @@
       <input type="submit" class="btn btn-primary btn-top" name="submit" value="Sign Out">
     </form>
 
+    <form id="get-album">
+      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Albums">
+    </form>
+
   </body>
 </html>
