Added get albums by user feature

--- a/index.html
+++ b/index.html
@@ -43,5 +43,9 @@
       <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Albums">
     </form>
 
+    <form id="album-by-user">
+      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Albums by User">
+    </form>
+
   </body>
 </html>
