Added Create Artist Feature

--- a/index.html
+++ b/index.html
@@ -47,5 +47,18 @@
       <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Albums by User">
     </form>
 
+    <form id="add-album">
+      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add an Album">
+      <input type="text" name="album[name]" id="add-album-name" placeholder="Enter Album Name">
+      <input type="text" name="album[name]" id="add-album-name" placeholder="Enter Artist Name">
+    </form>
+
+    <form id="add-artist">
+      <input type="text" name="artist[name]" id="add-artist-name" placeholder="Enter Artist Name">
+      <input type="text" name="artist[genre]" id="add-artist-genre" placeholder="Enter Artist Genre">
+      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add an Artist">
+    </form>
+
+
   </body>
 </html>
