Added Get Artist Feature

--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
       <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add an Artist">
     </form>
 
+    <div>
+      <h2>Artist Name: <span class="artist_name"></span></h2>
+      <h3>Artist Genre: <span class="artist_genre"></span></h3>
+    </div>
+
+    <form id="get-artists">
+      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get your artists">
+    </form>
+
+    <div>
+      <h2>My artists: </h2>
+      <ul class="artists"></ul>
+    </div>
+
 
   </body>
 </html>
