Added artist ID and get song forms

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
       <ul class="artists"></ul>
     </div>
 
+    <form id="add-song">
+      <input type="text" name="song[name]" id="add-song-name" placeholder="Enter Song Name">
+      <input type="text" name="song[album]" id="add-song-album" placeholder="Enter Song Album">
+      <input type="text" name="song[artist_id]" id="add-artist-id" placeholder="Enter Artist ID">
+      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add a Song">
+    </form>
 
   </body>
 </html>
