Created add song feature

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
     </form>
 
     <form id="add-album">
-      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add an Album">
       <input type="text" name="album[name]" id="add-album-name" placeholder="Enter Album Name">
-      <input type="text" name="album[name]" id="add-album-name" placeholder="Enter Artist Name">
+      <input type="text" name="album[artist_id]" id="add-album-name" placeholder="Enter Artist ID">
+      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add an Album">
     </form>
 
     <form id="add-artist">
