Added API call to MusixMatch

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!-- Do not add `script` tags unless you know what you are doing -->
 <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
 <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-
+<script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"></script>
   </head>
   <body>
     <h1>Test</h1>
@@ -80,5 +80,8 @@
       <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add a Song">
     </form>
 
+    <form id="get-lyrics">
+      <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Lyrics">
+    </form>
   </body>
 </html>
