Finished Create Album functionality

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <form id="add-album">
       <input type="text" name="album[name]" id="add-album-name" placeholder="Enter Album Name">
       <input type="text" name="album[artist_id]" id="add-album-name" placeholder="Enter Artist ID">
+      <input type="text" name="album[song_id]" id="add-album-name" placeholder="Enter Song ID">
       <input type="submit" class="btn btn-primary btn-top" name="submit" value="Add an Album">
     </form>
 
