Added s to http in api call

--- a/index.html
+++ b/index.html
@@ -84,5 +84,7 @@
     <form id="get-lyrics">
       <input type="submit" class="btn btn-primary btn-top" name="submit" value="Get Lyrics">
     </form>
+
+    <p class="lyrics"></p>
   </body>
 </html>
